# educhainx

./: .claudeignore  .gitignore  DESIGN.md  README.md  et --hard 4125e36  report.txt  todo.txt
backend/: README.md  go.mod
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/course/: service.go  service_test.go
backend/internal/did/: issuer.go
backend/internal/httpapi/: handlers_course.go  handlers_identity.go  handlers_solana.go  handlers_student.go  router.go  router_test.go
backend/internal/student/: service.go  service_test.go
backend/internal/verify/: registry.csv  service.go
contracts/: Anchor.toml  README.md
contracts/programs/educhain/: Cargo.toml
contracts/programs/educhain/src/: lib.rs
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/certificates/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: WalletProviders.tsx
frontend/src/lib/: LanguageContext.tsx  api.ts  edux.ts  useChatUsername.ts
frontend/src/views/: AccountLogout.tsx  Certificates.tsx  Chat.tsx  Dashboard.tsx  InstructorDashboard.tsx  LandingPage.tsx  Marketplace.tsx  Onboarding.tsx  Profile.tsx  Settings.tsx  Verification.tsx
newFront/: .gitignore  plan.md
newFront/src/: App.tsx  index.css
newFront/src/pages/: Dashboard.tsx  InstructorDashboard.tsx  LandingPage.tsx  Marketplace.tsx  Onboarding.tsx  Profile.tsx  Verification.tsx
solana/: package-lock.json
(+30 files in other folders)
