[package]
name = "educhain"
version = "0.1.0"
description = "EduChain — course tokenization, atomic buy+split, on-chain certs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "educhain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
